Mon Jul 30 11:24:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Parse_Node.h:
          Removed commented out code and improved documentation

Mon Jul 30 11:19:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/compiler.m4:
          Improved support for Intel C++ on Linux

Mon Jul 30 10:21:56 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * include/makeinclude/platform_sunos5_g++.GNU:
          Added -z now linker option to gcc builds. This fixes
          TAO/orbsvcs/tests/Bug_2285_Regression/run_test.pl,
          TAO/orbsvcs/tests/Bug_2285_Regression/run_test2.pl, and
          TAO/orbsvcs/tests/Bug_2287_Regression/run_test.pl in
          corresponding build.

Mon Jul 30 09:51:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added check for InterLocked methods

Mon Jul 30 09:11:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_sunos5_ghs.GNU:
        * include/makeinclude/platform_vxworks5.x_ghs.GNU:
          Removed, these are not tested anymore and outdated.

Mon Jul 30 07:55:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
          Removed support for dot_path, not supported by the doxygen
          script anymore

        * bin/PerlACE/Run_Test.pm:
          When waiting for files we sleep each time a second, changed this
          to 50ms so that we don't loose time for each test, given the
          fact that we have about 600 tests it could safe a few minutes
          for a few test run. Thanks to Chad Elliot for providing these
          changes

Mon Jul 30 07:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added bswap_16, bswap_32, and b_swap64

Mon Jul 30 07:28:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
        * m4/config_h.m4: