@@ -57,13 +57,13 @@ namespace ACE_OS {
   extern ACE_Export
   ACE_HANDLE open (const char *filename,
                    int mode,
-                   int perms = ACE_DEFAULT_OPEN_PERMS,
+                   mode_t perms = ACE_DEFAULT_OPEN_PERMS,
                    LPSECURITY_ATTRIBUTES sa = 0);
 #if defined (ACE_HAS_WCHAR)
   extern ACE_Export
   ACE_HANDLE open (const wchar_t *filename,
                    int mode,
-                   int perms = ACE_DEFAULT_OPEN_PERMS,
+                   mode_t perms = ACE_DEFAULT_OPEN_PERMS,
                    LPSECURITY_ATTRIBUTES sa = 0);
 #endif /* ACE_HAS_WCHAR */
 
